# sbp-dxd-m3

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pom.xml
api/: Dockerfile  pom.xml
base/: pom.xml
casper/: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
casper/did_common/: Cargo.toml
casper/did_common/src/: constants.rs  lib.rs
casper/did_registry/: Cargo.toml
casper/did_registry/src/: error.rs  main.rs  utils.rs
casper/tests/: Cargo.toml
casper/tests/src/: did_contract_tests.rs  did_instance.rs  lib.rs
docs/: devxdao-architecture.md
docs/diagrams/: artifacts.puml  invoices.puml  parties.puml
docs/reviewInstructions/: correct_verification_UBL.xml  correct_verification_UBL_Base64.xml  incorrect_verification_UBL.xml  incorrect_verification_UBL_Base64.xml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docker/nginx/: default.conf
frontend/public/: config.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.scss
frontend/src/components/: BannerComponent.vue  CurrencySelectComponent.vue  InputComponent.vue  LoginComponent.vue  MilestonesComponent.vue  SideBarComponent.vue  StatusInfoComponent.vue  StepsComponent.vue  TableContractComponent.vue  TableInvoiceComponent.vue  TableMarketplaceComponent.vue  TableUserComponent.vue  TopBarComponent.vue  VerifyInvoiceComponent.vue
frontend/src/data/: index.ts
it-test/: pom.xml
keycloak-provisioning/: Dockerfile  local.sh  terraform.tf
npl/: Dockerfile  pom.xml
parent-pom/: pom.xml
(+120 files in other folders)
